# deepresearch

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.trellis/: .template-hashes.json
.trellis/spec/backend/: directory-structure.md  error-handling.md  index.md  quality-guidelines.md  research-agent-runtime.md
.trellis/spec/frontend/: directory-structure.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/04-13-chatgpt-like-ui/: check.jsonl  (+2 more)
app/: __init__.py  chat_manager.py  cli.py  config.py  main.py  run_manager.py  run_store.py  runtime.py  runtime_progress.py
app/api/: __init__.py  routes.py  schemas.py
app/domain/: __init__.py  models.py
app/graph/: builder.py  state.py
app/services/: __init__.py  budgets.py  chat.py  citations.py  conversation_memory.py  dedupe.py  evidence_extraction.py  llm.py  planning.py  query_rewrite.py  report_contract.py  research_progress.py  research_quality.py  research_worker.py  source_content.py  synthesis.py
app/tools/: __init__.py  extract.py  fetch.py  search.py
docs/: current-langgraph-graph.md  deep-research-flow-analysis.md  deep-research-flow.md  graph-nodes-analysis.md
tests/unit/: test_api_routes.py  test_audit.py  test_chat_manager.py  test_chat_service.py  test_citations.py  test_cli.py  test_config.py  test_conversation_memory.py  test_dedupe.py  test_evidence_extraction.py  test_extract_tool.py  test_gap_check.py  test_planning.py  test_query_rewrite.py  test_research_progress.py  test_research_quality.py  test_research_worker_service.py  test_research_worker_subgraph.py  test_run_manager.py  test_run_store.py  test_runtime.py  test_search_tool.py  test_source_content.py  test_synthesis.py  test_synthesize_node.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx  styles.css
(+169 files in other folders)
